# custom_rmsd_m2_geniomhe

./: .gitignore  README.md  correlation_scores.csv  pyproject.toml
data/SCORES/: rp03.csv  rp04.csv  rp05.csv  rp06.csv  rp07.csv  rp08.csv  rp09.csv  rp11.csv  rp12.csv  rp13.csv  rp14_bound.csv  rp14_free.csv  rp16.csv  rp17.csv  rp18.csv  rp21.csv  rp23.csv  rp24.csv  rp25.csv  rp29.csv  rp32.csv  rp34.csv
slides/: .gitignore  slides.qmd
src/: CustomCGRMSD.py  compute_correlation.py  compute_custom_rmsd.py  compute_our_custom_rmsd.py  correlation.py  inputs.py  metrics.py  plot_correlation.py  read_pdb.py  utils.py
